# rust-bootcamp-2023

./: Cargo.toml
exercises/basic-of-rust/src/: conditions.rs  functions.rs  strings.rs
exercises/complex-type/src/: enums.rs  structs.rs
exercises/error-handling/src/: lib.rs
exercises/generic-type/src/: lib.rs
exercises/ownership-borrowing/src/: lib.rs
exercises/traits/src/: lib.rs
final-project/state-machine-atm/src/: atm.rs  traits.rs
