[package]
name = "Rust-Bootcamp-2023"
version = "0.1.0"
edition = "2021"
authors = ["CocDap"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "./exercises/generic-type",
  "./exercises/traits",

]

[[test]]
name = "generic-type"
path = "./exercises/generic-type/src/lib.rs"

[[test]]
name = "traits"
path = "./exercises/traits/src/lib.rs"


[dependencies]