[package]
name = "Rust-Bootcamp-2023"
version = "0.1.0"
edition = "2021"
authors = ["CocDap"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "./exercises/error-handling"

]

[[test]]
name = "error-handling"
path = "./exercises/error-handling/src/lib.rs"


[dependencies]
