[package]
name = "Rust-Bootcamp-2023"
version = "0.1.0"
edition = "2021"
authors = ["CocDap"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "./final-project/state-machine-atm",

]

[[test]]
name = "final-project"
path = "./final-project/state-machine-atm/src/lib.rs"

[dependencies]
